<resources>
    <string name="app_name">Pop Clock</string>
    <string name="delimeter">:</string>
    <string name="background_img">Background img</string>
    <string name="hr_min_seperator">Hr Min Seperator</string>
    <string name="text_that_seperates_hr_min">Text that separates Hr/Min</string>
    <string name="defaultDelimeter">freakin</string>
    <string name="font_color_label">Font Color</string>
    <string name="black">BLACK</string>
    <string name="red">RED</string>
    <string name="white">BLUE</string>
    <string name="font_size_label">Font Size</string>
    <string name="_50">50</string>
    <string name="widget_settings_submit_button_text">Create Widget</string>
</resources>
