<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.koleckar.popclock.SettingsPage">


    <Switch
        android:id="@+id/background_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:checked="true"
        android:clickable="true"
        android:text="@string/background_img" />

    <Switch
        android:id="@+id/delim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/hr_min_separator" />

    <TextView
        android:id="@+id/delimLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:labelFor="@+id/delimText"
        android:paddingTop="20dp"
        android:text="@string/text_that_separates_hr_min"
        android:visibility="gone" />

    <EditText
        android:id="@+id/delimText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:inputType="text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/colorLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:labelFor="@+id/radiogroup"
        android:text="@string/font_color_label" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:checkedButton="@+id/radioBlack"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#2a2a2a"
            android:text="@string/black" />

        <RadioButton
            android:id="@+id/radioRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:shadowColor="#ff0000"
            android:text="@string/red"
            android:textColor="#ff0000" />

        <RadioButton
            android:id="@+id/radioWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="#ffffff"
            android:text="@string/white"
            android:textColor="@color/colorPrimaryDark" />
    </RadioGroup>

    <TextView
        android:id="@+id/sizeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:labelFor="@+id/fontSize"
        android:text="@string/font_size_label" />

    <EditText
        android:id="@+id/fontSize"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_50" />

    <Button
        android:id="@+id/create_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/widget_settings_submit_button_text" />

</LinearLayout>